Update README.md and edit the pom.xml file